--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,16 +1,22 @@
-name: Install docker image from github container registry
+name: Docker push container at org level (GITHUB_TOKEN)
+on: workflow_dispatch
 
-on: pull_request
-
-permissions: read-all
+permissions:
+ packages: write
+ 
+env:
+ pkg: "drupal"
 
 jobs:
-  login-and-install:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with: 
-          registry: ghcr.io
-          username: ${{ github.actor }} 
-          password: ${{ secrets.GITHUB_TOKEN }} 
+ all:
+  runs-on: self-hosted
+  
+  steps:
+   - name: Login to GitHub container Registry
+     run: echo ${{ secrets.GITHUB_TOKEN }} | docker login github.localhost:8001 -u ${{ github.actor }} --password-stdin
+   - name: Build the Docker image
+     run: docker pull $pkg:latest
+   - name: Tag the Docker image
+     run: docker tag $pkg:latest github.localhost:8001/github/$pkg:latest
+   - name: Push the Docker image to the registry
+     run: docker push github.localhost:8001/github/$pkg:latest
