--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,10 +13,10 @@ jobs:
   
   steps:
    - name: Login to GitHub container Registry
-     run: echo ${{ secrets.GITHUB_TOKEN }} | docker login github.localhost:8001 -u ${{ github.actor }} --password-stdin
+     run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
    - name: Build the Docker image
      run: docker pull $pkg:latest
    - name: Tag the Docker image
-     run: docker tag $pkg:latest github.localhost:8001/github/$pkg:latest
+     run: docker tag $pkg:latest ghcr.io/cppkg/$pkg:latest
    - name: Push the Docker image to the registry
-     run: docker push github.localhost:8001/github/$pkg:latest
+     run: docker push ghcr.io/cppkg/$pkg:latest
